doc(EventController): create doc done event
